--- a/code/SleepAPP/res/values/strings.xml
+++ b/code/SleepAPP/res/values/strings.xml
@@ -26,4 +26,13 @@
     <string name="topic7">7、近1个月，您用药物催眠的情况</string>
     <string name="topic8">8、近1个月，您常感到困倦吗？</string>
     <string name="topic9">9、近1个月，您做事情的精力不足吗？</string>
+    
+    <string name="soft_update_no">已经是最新版本</string>
+    <string name="soft_update_title">软件更新</string>
+    <string name="soft_update_info">检测到新版本，立即更新吗？</string>
+    <string name="soft_update_updatebtn">更新</string>
+    <string name="soft_update_later">稍后更新</string>
+    <string name="soft_updating">正在更新</string>
+    <string name="soft_update_cancel">取消</string>
+   
 </resources>
